--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Mada&display=swap" rel="stylesheet">
+	<title>Kirill Ilyin | Personal page</title>
 	<style type="text/css">
 		body {
 			font-family: 'Mada', sans-serif;
