added support for smartphones

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		.prof-line {
 			border-bottom: 2px solid white;
 			opacity: .5;
-			margin-top: 3%;
-			margin-bottom: 3%;
+			margin-top: 6%;
+			margin-bottom: 6%;
 		}
 		.social {
 			display: flex;
@@ -60,6 +60,33 @@
 		}
 		.margin-left20 {
 			margin-left: 20px;
+		}
+		/* For smartphones */
+		@media screen and (orientation: portrait) and (max-width: 980px) { 
+			.profile {
+				width: 500px;
+				margin-top: 24%;
+			}
+			.my-name {
+				margin-top: 6%;
+				font-size: 100px;
+				line-height: 100px;
+			}
+			.my-photo {
+				width: 400px; 
+				height: 400px;
+			}
+			.prof-line {
+				border-bottom: 4px solid white;
+				margin-top: 12%;
+				margin-bottom: 12%;
+			}
+			.social-svg {
+				width: 80px;
+			}
+			.margin-left20 {
+				margin-left: 40px;
+			}
 		}
 	</style>
    <title>!DOCTYPE</title>
