added E-mail svg

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 			<a href="https://twitter.com/black_alastor" target="_blank"><img class="social-svg" title="Twitter" src="./assets/twitter.svg"></a>
 			<a href="https://t.me/dark_alastor" target="_blank"><img class="social-svg margin-left20" Title="Telegram" src="./assets/telegram.svg"></a>
 			<a href="https://vk.com/k_ilin" target="_blank"><img class="social-svg margin-left20" Title="VK" src="./assets/vk.svg"></a>
+			<a href="mailto:Kirill@Ilyin.dev" target="_blank"><img class="social-svg margin-left20" Title="E-mail" src="./assets/gmail.svg"></a>
 		</div>
 	</div>
 </body>
