changed backgound gradient

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 		body {
 			font-family: 'Mada', sans-serif;
 		}
+		html {
+			height: 100vh;
+		}
 		.background {
-			background: rgb(122,12,195);
-			background: linear-gradient(90deg, rgba(122,12,195,1) 0%, rgba(71,119,255,1) 50%, rgba(219,100,198,1) 100%);
-			
+			/*background: rgb(122,12,195);
+			background: linear-gradient(90deg, rgba(122,12,195,1) 0%, rgba(71,119,255,1) 50%, rgba(219,100,198,1) 100%);*/
+			background-image: linear-gradient(to left top, #7a0cc3, #772bcd, #743dd6, #714cdf, #6f5ae7, #765fe9, #7d64ea, #8469ec, #9268e8, #9f66e4, #aa65e0, #b464db);
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 		.profile {
 			width: 400px;
